--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "type-anim",
+  "name": "JeherillaJanwar/type-anim",
   "description": "⚡ Dynamically generated, customizable SVG that gives the appearance of typing and deleting text. Typing SVGs can be used as a bio on your Github profile readme or repository.",
   "repository": "https://github.com/JeherillaJanwar/type-anim/",
   "keywords": ["github", "dynamic", "readme", "typing", "svg", "profile"],
