--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "JeherillaJanwar/type-anim",
+  "name": "Readme Typing SVG",
   "description": "⚡ Dynamically generated, customizable SVG that gives the appearance of typing and deleting text. Typing SVGs can be used as a bio on your Github profile readme or repository.",
-  "repository": "https://github.com/JeherillaJanwar/type-anim/",
+  "repository": "https://github.com/DenverCoder1/readme-typing-svg/",
   "keywords": ["github", "dynamic", "readme", "typing", "svg", "profile"],
   "formation": {
     "web": {
